# mdsphinx

./: .flake8  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  release.sh
example/: README.md
example/1/: conf.py.jinja  diagram.mmd  example.md
example/2/: .gitignore
example/2/directory/: a.md  b.md
example/2/directory/x/: c.md  d.md
example/2/directory/x/xx/1.yyy/: z.md
example/2/directory/x/xx/2.xxx/: e.md  f.md
example/2/directory/y/: g.md  h.md
mdsphinx/: __main__.py  config.py  env.py  jinjaext.py  logger.py  mermaid.py  tempdir.py
mdsphinx/cli/: __main__.py  env.py  environment.py  prepare.py  process.py  render.py
mdsphinx/core/: env.py  environment.py  prepare.py  process.py  quickstart.py
mdsphinx/templates/: conf.py.jinja
test/: test__main__.py  test_select.py  test_tempdir.py
