[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning>=1.0.0,<2.0.0"]
build-backend = "poetry_dynamic_versioning.backend"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry]
name = "mdsphinx"
version = "0.0.0"
description = "Convert markdown to any output that Sphinx supports"
authors = ["Adam Gagorik <adam.gagorik@gmail.com>"]
readme = "README.md"
license = "WTFPL"

[tool.poetry.dependencies]
python = "^3.12"
typer = "^0.12.3"

[tool.poetry.scripts]
bany = 'mdsphinx.cli.__main__:app'

[tool.poetry.group.dev.dependencies]
pytest = "^8.2.2"
mypy = "^1.10.1"
pytest-timeout = "^2.3.1"

[tool.black]
line-length = 132
target-version = ['py311']

[tool.mypy]
python_version = "3.12"
show_error_codes = true
strict = true

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(message)s"
